Rewrite to use nodejs instead of Docker due to Docker

--- a/action.yml
+++ b/action.yml
@@ -20,5 +20,5 @@ inputs:
     description: 'The URL of the Docker Container Registry'
     required: true
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: 'node12'
+  main: 'main.js'
